# bmstu-5-term-aa

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  readme.md
lab_01/docs/: 00-title.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex
lab_01/src/algorithms/: levenshtein_distance.cpp  levenshtein_distance.hpp
lab_01/src/efficiency/: execution_time.cpp
lab_01/src/tests/: test_levenshtein_distance.cpp
lab_02/docs/: 00-title.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex
lab_02/src/algorithms/: matrix_multiplication.hpp
lab_02/src/efficiency/: exec_time.py  execution_time.cpp
lab_02/src/models/: matrix.hpp
lab_02/src/tests/: test_matrix_multiplication.cpp
lab_02/src/utils/: execution_time.hpp
lab_03/docs/: 01_tital.tex  02_contents.tex  03_introduction.tex  04_analysis.tex  05_design.tex  06_implementation.tex  07_research.tex  08_literature.tex  09_conclusion.tex  literature.bib  preamble.inc.tex  report.tex  utf8gost705u.bst
lab_03/src/algorithms/: sort.hpp
lab_03/src/tests/: test_sort.cpp
lab_03/src/time_measurement/: sort_time_execution.cpp  sort_time_visualize.py
lab_04/: docker-compose.yml
lab_04/docs/: 00-title.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  matrix_multiplication.hpp
lab_04/nginx/config/: lab4.com
lab_04/nginx/www/: index.html
lab_04/src/: client.cpp  components.hpp  main.cpp
lab_04/src/models/: matrix.hpp  request.hpp  response.cpp  response.hpp
lab_04/src/pool/: blocking_queue.hpp  thread_pool.hpp
lab_04/src/server/: server.cpp  server.hpp
lab_04/src/utils/: parse.cpp  parse.hpp  to_string.hpp
lab_04/src/views/: handler.hpp
lab_04/src/views/get_tasks/: handler.cpp  handler.hpp
lab_04/src/views/multiply_matrix/: handler.cpp  handler.hpp
lab_05/docs/: 00-title.aux  00-title.tex  01-contents.aux  02-intro.aux  02-intro.tex  10-analysis.aux  10-analysis.tex  20-design.aux  20-design.tex  30-impl.aux  30-impl.tex  40-research.aux  50-conclusion.aux  51-biblio.aux  51-biblio.bib  report.bbl  report.blg  report.out  report.toc
lab_05/src/: components.cpp
lab_05/src/models/: response.cpp
lab_05/src/pool/: blocking_queue.hpp
lab_05/src/server/: server.cpp  server.hpp
lab_05/src/utils/: parse.cpp
lab_05/src/views/: handler.cpp
